--- a/homework-3/c/Stack.dSYM/Contents/Info.plist
+++ b/homework-3/c/Stack.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.Stack</string>
+		<string>com.apple.xcode.dsym.stack</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
